Made changes to CSS style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <label for="search">Search</label>
+    <header id="search">
+        <label for="search"></label>
         <input type="search" name="search" id="search" placeholder="Search">
       </header>
       
