--- a/index.html
+++ b/index.html
@@ -6,44 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/baguetteBox.min.css">
 </head>
+
 <body>
     <header id="search">
         <label for="search"></label>
         <input type="search" name="search" id="search" placeholder="Search">
       </header>
       
-    <main id="index-gallery" class="wrapper-gallery">
-        <div class="gallery-img img01">
-        </div>
-        <div class="gallery-img img02">
-        </div>
-        <div class="gallery-img img03">
-        </div>
-        <div class="gallery-img img04">
-        </div>
-        <div class="gallery-img img05">
-        </div>
-        <div class="gallery-img img06">
-        </div>
-        <div class="gallery-img img07">
-        </div>
-        <div class="gallery-img img08">
-        </div>
-        <div class="gallery-img img09">
-        </div>
-        <div class="gallery-img img10">
-        </div>
-        <div class="gallery-img img11">
-        </div>
-        <div class="gallery-img img12">
-        </div>
+      <main>
+        <div class="gallery">
 
+            <a href="photos/01.jpg" class="card" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+                <img src="thumbnails/01.jpg" alt="Hay Bales">
+            </a>
+
+            <a href="photos/02.jpg" class="card" data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+                <img src="thumbnails/02.jpg" alt="Lake">
+            </a>
+
+            <a href="photos/03.jpg" class="card" data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+                <img src="thumbnails/03.jpg" alt="Canyon">
+            </a>
+
+            <a href="photos/04.jpg" class="card" data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
+                <img src="thumbnails/04.jpg" alt="Iceberg">
+            </a>
+
+            <a href="photos/05.jpg" class="card" data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+                <img src="thumbnails/05.jpg" alt="Desert">
+            </a>
+
+            <a href="photos/06.jpg" class="card" data-caption="Fall is coming, I love when the leaves on the trees start to change color.">
+                <img src="thumbnails/06.jpg" alt="Fall">
+            </a>
+
+            <a href="photos/07.jpg" class="card" data-caption="I drove past this plantation yesterday, everything is so green!">
+                <img src="thumbnails/07.jpg" alt="Plantation">
+            </a>
+
+            <a href="photos/08.jpg" class="card" data-caption="My summer vacation to the Oregon coast. I love the sandy dunes!">
+                <img src="thumbnails/08.jpg" alt="Dunes">
+            </a>
+
+            <a href="photos/09.jpg" class="card" data-caption="We enjoyed a quiet stroll down this countryside lane.">
+                <img src="thumbnails/09.jpg" alt="Countryside Lane">
+            </a>    
+
+            <a href="photos/10.jpg" class="card" data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
+                <img src="thumbnails/10.jpg" alt="Sunset"s>
+            </a>
+
+            <a href="photos/11.jpg" class="card" data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+                <img src="thumbnails/11.jpg" alt="Cave">
+            </a>
+
+            <a href="photos/12.jpg" class="card" data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+                <img src="thumbnails/12.jpg" alt="Bluebells">
+            </a>
+        </div>
     </main>
 
 
-
-
+    <script src="js/baguetteBox.min.js"></script>​
     <script src="js/app.js"></script>
 </body>
 </html>
