HTML & CSS Validator fixed mistakes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header id="search">
+    <header>
         <label for="search"></label>
         <input type="search" name="search" id="search" placeholder="Search">
       </header>
@@ -55,7 +55,7 @@
             </a>    
 
             <a href="photos/10.jpg" class="card" data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
-                <img src="thumbnails/10.jpg" alt="Sunset"s>
+                <img src="thumbnails/10.jpg" alt="Sunset">
             </a>
 
             <a href="photos/11.jpg" class="card" data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking.">
